# adk-mcp-test

./: .gitignore  README.md  pyproject.toml  run.sh
hello-agent/: agent.py
letter-counter-mcp/: README.md  __init__.py  server.py  test.py  test.sh
memory-agent/: __init__.py  agent.py
memory-analytics-agent/: __init__.py  agent.py
ollama-agent/: agent.py
